List getFirst / getLast