@@ -149,7 +149,7 @@ public class JcoResourceHolder extends ResourceHolderSupport {
 		if (tids==null) {
 			return null;
 		}
-		return tids.get(tids.size()-1);
+		return tids.getLast();
 	}
 
 
